--- a/1주차과제.ipynb
+++ b/1주차과제.ipynb
@@ -6,7 +6,7 @@
       "name": "1주차과제.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYLSrmGwGQhGJJRLaATF/g",
+      "authorship_tag": "ABX9TyMWEovogMlucBXZbgnhB7gh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "\n",
         "네이버 파파고 홈페이지에 들어가 하단 부분을 살펴보면 공개 API 라는 항목이 있다. 그 항목을 통해 이동하면 공개 API를 지원받을수 있는 홈페이지와 함께 간략한 설명도 찾아볼 수 있다. ([네이버 파파고 공개 API 지원 주소](https://developers.naver.com/products/nmt/))\n",
         "\n",
-        "'<center>![파파고](https://user-images.githubusercontent.com/60220571/83666784-728cca00-a608-11ea-8f99-3fd7095766f7.jpg)</center>'\n",
+        "![파파고](https://user-images.githubusercontent.com/60220571/83666784-728cca00-a608-11ea-8f99-3fd7095766f7.jpg)\n",
         "\n",
         "홈페이지 설명을 살펴보면 **파파고의 NMT 기술**은 입력 문장을 문장벡터로 변환하는 신경망(encoder)와 문장 벡터에서 번역하는 언어의 문장을 생성하는 신경망(decoder)를 대규모의 병렬 코퍼스부터 자동으로 학습한다고 한다. 또한 문장 전체 정보를 바탕으로 번역을 수행하기 때문에 기존 SMT 방식의 번역보다 더욱 정확하고 문장 맥락에 맞는 번역을 한다.\n",
         "이 설명을 통해 과거에는 SMT기술을 사용했으나 현재는 NMT 기술을 통해 번역기를 구현하고 있는 것을 알 수 있다. SMT기술과 NMT 기술을 살펴보면, \n",
@@ -65,13 +65,13 @@
         "\n",
         "음성 분야에서 활용되는 인공지능 제품으로는 대표적으로 인공지능 스피커가 있다. 인공지능 스피커(스마트 스피커, smart speaker)는 무선 스피커의 일종으로서, 하나 이상의 인상적인 말(hot word)의 도움을 받아 상호작용 동작과 핸즈프리 활성화를 제공하는 가상비서가 내장된 **‘보이스 커맨드 디바이스’**이다. 한국에서는 카카오의 카카오미니, 네이버의 클로바, SKT의 NUGU, KT의 기가지니 등의 제품들이 있고 해외에서는 아마존의 아마존 에코, 구글의 구글 홈 등이 있다. 이들 중 **아마존의 에코에 사용된 AI 알렉사**를 바탕으로 인공지능 스피커의 원리에 대해 조사해 보았다.\n",
         "\n",
-        "'<center>![아마존 에코](https://user-images.githubusercontent.com/60220571/83725366-c76a2800-a67c-11ea-9654-3a3471c81a6d.jpg)</center>'\n",
+        "![아마존 에코](https://user-images.githubusercontent.com/60220571/83725366-c76a2800-a67c-11ea-9654-3a3471c81a6d.jpg)\n",
         "\n",
         "알렉사가 음성을 인식하는 원리는, 인간의 목소리(명령)가 스피커의 마이크를 통해 입력되면 ‘스피치 프로세서(SPEECH PROCESSOR)’는 음성신호를 음성 신호 벡터로 변화시킨다. 이 음성 신호 벡터는 ‘스피치 인식기(SPEECH RECOGNIZER)’와 ‘언어 특징 추출기(LINGUISTIC REATURE EXTRACTOR)’를 통해 ‘언어 표현 정보(LINGUISTIC REPRESENTATION)’로 추출된다.\n",
         "\n",
         "추출된 언어 표현 정보는 ‘스킬 분류기(SKILL CLASSIFIER)’, ‘의도분류기(INTENT CLASSIFIER)’, ‘슬롯 인지기(SLOT RECOGINZER)’로 입력된다. 스킬 분류기는 언어 표현 정보를 통해 입력된 명령에 알맞은 스킬을 결정한다. 의도분류기는 언어 표현 정보를 통해 입력된 명령의 의도를 결정한다. 슬롯 인지기는 언어표현 정보에서 의미 있는 정보를 인지한다. 분류 및 인지를 마친 스킬, 의도, 슬롯은 ‘스킬 프로세서’를 거쳐 명령을 위한 관련 기기를 동작시킨다. \n",
         "\n",
-        "'<center>![알렉사](https://user-images.githubusercontent.com/60220571/83725310-aefa0d80-a67c-11ea-8502-b30757210e83.png)</center>'\n",
+        "![알렉사](https://user-images.githubusercontent.com/60220571/83725310-aefa0d80-a67c-11ea-8502-b30757210e83.png)\n",
         "\n",
         "알렉사가 입력된 언어를 제대로 이해하기 위해서는 스킬, 의도, 슬롯에 대한 정확한 분석이 선행되어야 한다. 그렇기 때문에 알렉사의 의도 분류기는 입력된 데이터를 기반으로 학습이 가능하다. **‘인공신경망(Artificial Neural Network, ANN)’와 ‘심층신경망(Deep Neural Network, DNN)’**를 사용할 수 있는 의도 분류기는 축적되는 데이터에 따라 뉴럴 네트워크의 변화하는 가중치를 감지하고, 이를 학습해 더욱 정확하게 명령의 의도를 판단할 수 있게 된다고 한다.\n",
         "\n",
@@ -95,7 +95,7 @@
         "\n",
         "이미지 분야의 경우 다른 분야보다 상대적으로 이미지 분류나, 손 제스처 인식 등 익숙한 기술들이 많았다. 그 중에서 요새 코로나-19로 인해 사람들이 마스크를 착용하고 잠금인식을 해제하려는 경우가 많아지면서 아이폰이 마스크 쓴 얼굴로도 얼굴인식으로 잠금화면을 해제할 수 있는가에 대한 기사를 보고 얼굴인식 분야에 대해 조사해보았다. ([한겨례 - 애플, 아이폰 얼굴인식 기능 개선…마스크 쓰면 곧장 암호 물어]( http://www.hani.co.kr/arti/economy/it/945850.html))\n",
         "\n",
-        "'<center>![face id](https://user-images.githubusercontent.com/60220571/83725504-01d3c500-a67d-11ea-993b-a83ff71d4d54.jpg)</center>'\n",
+        "![face id](https://user-images.githubusercontent.com/60220571/83725504-01d3c500-a67d-11ea-993b-a83ff71d4d54.jpg)\n",
         "\n",
         "**얼굴인식 시스템(안면 인식 시스템, facial recognition system)**은 디지털 이미지를 통해 각 사람을 자동으로 식별하는 컴퓨터 지원 응용 프로그램을 말한다. 이미 아이폰과 갤럭시 시리즈 등 많은 스마트 폰에서 생체인식으로 활용되고 있기 때문에 우리에게 매우 익숙한 기술이기도 하다. \n",
         "\n",
@@ -124,7 +124,7 @@
         "\n",
         "[작년 2019년 10월 21일의 기사](http://www.aitimes.kr/news/articleView.html?idxno=14500)를 살펴보면 현대자동차와 기아자동차는 **운전자의 주행 성향에 맞는 부분 자율주행을 구현하는 기술인 SCC-ML**을 세계 최초로 개발했다고 한다. SCC-ML은 크루즈 컨트롤 기능에서 스마트 크루즈 컨트롤(SCC)로, 스마트 크루즈 컨트롤에서 다시 SCC-ML에 발전해 온 것이다. \n",
         "\n",
-        "'<center>![인공지능 자동차](https://user-images.githubusercontent.com/60220571/83725611-2c258280-a67d-11ea-88f7-c4d80c848f83.jpg)</center>'\n",
+        "![인공지능 자동차](https://user-images.githubusercontent.com/60220571/83725611-2c258280-a67d-11ea-88f7-c4d80c848f83.jpg)\n",
         "\n",
         "기술의 의미를 순서대로 하나씩 살펴보면 크루즈 컨트롤은 고속도로나 막히지 않는 도로에서 엑셀을 밟지 않고도 일정한 속도를 유지 시켜주는 기능이다. 정속주행 또는 장거리 운행에서 유용하게 사용된다. 여기에 더해 스마트 크루즈 컨트롤(SCC)는 앞 차량과의 거리를 일정하게 유지하여 운전자가 설정해둔 속도로 자율주행을 해주는 기능으로 ADAS(첨단 운전자보조 시스템)의 주요 기술 중 하나다. \n",
         "\n",
